# ds2_seamless

./: .gitattributes  .gitignore  CMakeLists.txt
dll/: CMakeLists.txt  core.cpp  core.h  dllmain.cpp  log.cpp  log.h  player_count.cpp  player_count.h  scaling.cpp  scaling.h  settings.cpp  settings.h  version_gate.cpp  version_gate.h
dll/hooks/: getaddrinfo_hook.cpp  getaddrinfo_hook.h  iat.cpp  iat.h  savefile_hook.cpp  savefile_hook.h  server_redirect_hook.cpp  server_redirect_hook.h
docs/: M2-design.md  M2-plan.md  M3-design.md  M4-design.md  M5-design.md  M5b-design.md
ghidra-scripts/: m2_chokepoints.py  m2_recon.py  m3_chokepoints.py  m3_chokepoints2.py  m3_chokepoints3.py  m3_recon.py
launcher/: CMakeLists.txt  main.cpp
recon/: chokepoints.txt  chokepoints_m3.txt  chokepoints_m3_pass2.txt  chokepoints_m3_pass3.txt  exports.csv  imports.csv  steam_api_xrefs.csv  strings_netcode.csv  strings_scaling.csv  summary.txt  summary_m3.txt  symbols_scaling.csv
scripts/: build.ps1  ghidra-analyze.cmd  ghidra-analyze.ps1
